added swagger documentation for the pagination route
