# src/routes/api-routes.js
@@ -78,40 +78,63 @@ const router = Router();
  * @swagger
  * /api/bookings:
  *   get:
- *     summary: Retrieve all bookings
+ *     summary: Retrieve all bookings (Paginated)
  *     tags: [Bookings]
  *     security:
  *       - sessionCookieAuth: []
+ *     parameters:
+ *       - in: query
+ *         name: page
+ *         schema:
+ *           type: integer
+ *           default: 1
+ *         description: The page number to retrieve
+ *       - in: query
+ *         name: limit
+ *         schema:
+ *           type: integer
+ *           default: 10
+ *         description: The number of bookings per page
  *     responses:
  *       200:
- *         description: A list of all customer bookings
+ *         description: A paginated list of bookings
  *         content:
  *           application/json:
  *             schema:
- *               type: array
- *               items:
- *                 type: object
- *                 properties:
- *                   bookingCode:
- *                     type: string
- *                   scheduleId:
- *                     type: string
- *                   tripId:
- *                     type: string
- *                   ticketClass:
- *                     type: string
- *                   selectedDay:
- *                     type: string
- *                   totalAmount:
- *                     type: number
+ *               type: object
+ *               properties:
+ *                 metadata:
+ *                   type: object
+ *                   properties:
+ *                     totalItems:
+ *                       type: integer
+ *                     currentPage:
+ *                       type: integer
+ *                     itemsPerPage:
+ *                       type: integer
+ *                     totalPages:
+ *                       type: integer
+ *                 data:
+ *                   type: array
+ *                   items:
+ *                     type: object
+ *                     properties:
+ *                       bookingCode:
+ *                         type: string
+ *                       scheduleId:
+ *                         type: string
+ *                       tripId:
+ *                         type: string
+ *                       ticketClass:
+ *                         type: string
+ *                       selectedDay:
+ *                         type: string
+ *                       totalAmount:
+ *                         type: number
  *       500:
  *         description: Server error
  *       401:
- *         description: Login is required.
- *         content:
- *           application/json:
- *             schema:
- *               $ref: '#/components/schemas/AuthError'
+ *         description: Login is required
  */
 router.get("/", requireApiLogin(), getAllBookings);
 
